--- a/app/views/fees/index.html.erb
+++ b/app/views/fees/index.html.erb
@@ -14,9 +14,11 @@
       <tr>
         <td><%= fee.name %></td>
         <td><%= fee.amount %></td>
-        <td><%= link_to 'Show', fee %></td>
-        <td><%= link_to 'Edit', edit_fee_path(fee) %></td>
-        <td><%= link_to 'Destroy', fee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_user.admin? -%>
+          <td><%= link_to 'Show', fee %></td>
+          <td><%= link_to 'Edit', edit_fee_path(fee) %></td>
+          <td><%= link_to 'Destroy', fee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end -%>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Fee', new_fee_path %>
+<%= link_to 'New Fee', new_fee_path if current_user.admin? %>
