sit some implimentation

--- a/app/views/fees/_form.html.erb
+++ b/app/views/fees/_form.html.erb
@@ -19,6 +19,14 @@
     <%= f.label :amount %><br>
     <%= f.number_field :amount %>
   </div>
+  <div class="field">
+    <%= f.label :start_range %><br>
+    <%= f.number_field :start_range %>
+  </div>
+  <div class="field">
+    <%= f.label :end_range %><br>
+    <%= f.number_field :end_range %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
