--- a/app/views/fees/index.html.erb
+++ b/app/views/fees/index.html.erb
@@ -15,9 +15,9 @@
         <td><%= fee.name %></td>
         <td><%= fee.amount %></td>
         <% if current_user.admin? -%>
-          <td><%= link_to 'Show', fee %></td>
+          <td><%= link_to 'Show', fee_path(fee) %></td>
           <td><%= link_to 'Edit', edit_fee_path(fee) %></td>
-          <td><%= link_to 'Destroy', fee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <td><%= link_to 'Destroy', fee_path(fee), method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end -%>
       </tr>
     <% end %>
