--- a/app/views/fees/index.html.erb
+++ b/app/views/fees/index.html.erb
@@ -1,3 +1,10 @@
+
+<% if current_user %>
+  <p>Hello, <%=link_to current_user.name %> you have just signed in, yey</p>
+<% else %>
+  <p>You are not Logged-In please <%=link_to 'Sign up', new_user_registration_path%>, or <%= link_to 'Login', new_user_session_path %>!<p>
+<% end %>
+
 <h1>Listing fees</h1>
 
 <table>
@@ -14,7 +21,7 @@
       <tr>
         <td><%= fee.name %></td>
         <td><%= fee.amount %></td>
-        <% if current_user.admin? -%>
+        <% if current_user && current_user.admin? -%>
           <td><%= link_to 'Show', fee %></td>
           <td><%= link_to 'Edit', edit_fee_path(fee) %></td>
           <td><%= link_to 'Destroy', fee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,4 +33,4 @@
 
 <br>
 
-<%= link_to 'New Fee', new_fee_path if current_user.admin? %>
+<%= link_to 'New Fee', new_fee_path if current_user && current_user.admin? %>
