--- a/app/views/fees/index.html.slim
+++ b/app/views/fees/index.html.slim
@@ -1,3 +1,10 @@
+- if current_user
+  p
+    | Hello, #{link_to current_user.name} you have just signed in, yey
+- else
+  p
+    | You are not Logged-In please #{link_to 'Sign up', new_user_registration_path}, or #{link_to 'Login', new_user_session_path}!
+    p
 h1 Listing fees
 table
   thead
@@ -10,10 +17,10 @@ table
       tr
         td= fee.name
         td= fee.amount
-        - if current_user.admin?
+        - if current_user && current_user.admin?
           td= link_to 'Show', fee
           td= link_to 'Edit', edit_fee_path(fee)
-          td= link_to 'Destroy', fee, method: :delete, confirm: 'Are you sure?'
+          td= link_to 'Destroy', fee, method: :delete, confirm: 'Are you sure?'  
 br
-  = link_to 'New Fee', new_fee_path if current_user.admin?
+  = link_to 'New Fee', new_fee_path if current_user && current_user.admin?
 
