--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,6 +7,9 @@
     = stylesheet_link_tag "application-ie8", media: "all"
   = "<!--[if gt IE 8]><!-->#{stylesheet_link_tag("application", media: "all")}<!--<![endif]-->".html_safe
 
+- content_for :head do 
+  = csrf_meta_tags
+
 - content_for :javascripts do
   = javascript_include_tag "application"
 
